2001-10-17  Adam Fedor  <fedor@gnu.org>

	* configure.in (GNUSTEP_LDIR): Look for libobjc in
	.../$LIBRARY_COMBO first.

2001-10-16  Adam Fedor  <fedor@gnu.org>

	* Source/GNUmakefile: Strip drive names from paths.

	* Source/GSXML.m: Add dummy GSXMLParser when not using libxml.
	* Source/NSBundle.m (_absolutePathOfExecutable:): Check for
	'Path' variable also (for Windows).
	* Source/NSUser.m (GSStringFromWin32EnvironmentVariable): New
	function.
	(NSHomeDirectoryForUser): Use it.
	(setupPathNames): Prepend systemDrive to compiled in root
	paths.
	(patches from stephen@brandonitconsulting.co.uk).

	* Source/NSFileManager.m (_attributesAtPath:traverseLink:forCopy:):
	On (sparc && DEBUG) disable the setgrent functions which cause gdb
	to crash.

2001-10-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GNUmakefile:
	* Source/GSXML.m:
	* Headers/Foundation/GSXML.h: Build and install dummy version if
	libxml is not available.
	* Tools/GNUmakefile:
	* Tools/AGSIndex.h:
	* Tools/AGSIndex.m:
	* Tools/AGSOutput.h:
	* Tools/AGSOutput.m:
	* Tools/AGSParser.h:
	* Tools/AGSParser.m:
	* Tools/autogsdoc.m: Many bugfixes and additions, bew code to
	generate indexes.

2001-10-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/AGSOutput.m: Added new 'unit' pseudo-markup to permit
	control over chapter layout for a chapter containing class,
	category, or protocol documentation.

2001-10-14  Fred Kiefer <FredKiefer@gmx.de>

	* Source/Unicode.m: 
	In iconv_cstrtoustr() and iconv_ustrtocstr() report if a iconv
	conversion cannot be found. Also added a type convert to the iconv
	call, so that the compiler wont report a type mismatch.
	
2001-10-13  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/base/NSPathUtilities.h (GSSystemRootDirectory): 
	New function.
	* Source/GNUmakefile: Define GNUSTEP_LOCAL_ROOT and
	GNUSTEP_NETWORK_ROOT paths on compile line.
	* Source/NSUser.m (setupPathNames): Use compiled in paths as backup
	if environment variables not found.